apps/core/secrets/infisical/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infisical
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
    argocd.argoproj.io/sync-options: Prune=false
