apps/core/secrets/infisical/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical-http-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: ingress-gateway
  hostnames:
    - infisical.internal.inforisk.ma
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: infisical-infisical-standalone-infisical
          port: 8080
          weight: 1
